--- a/template/open-abap/package.json
+++ b/template/open-abap/package.json
@@ -4,9 +4,7 @@
   "description": "Template for ABAP source based functinos",
   "main": "index.js",
   "scripts": {
-    "build": "npm run build:transpile-abap",
-    "build:transpile-abap": "node ./scripts/build.js",
-    "build:transpiler": "cd node_modules/transpiler_poc/ && rm -rf build && npm i && node_modules/.bin/tsc && cd -",
+    "build": "node ./scripts/build.js",
     "test": "echo \"Error: no tests specified\" && exit 0"
   },
   "keywords": [],
