--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,7 +35,7 @@ jobs:
           username: ${{secrets.OPENFAAS_USERNAME}}
           password: ${{secrets.OPENFAAS_PASSWORD}}
       - name: Publish image
-        if: "success() && github.ref == 'refs/heads/master' && 1 = 0"
+        if: "success() && github.ref == 'refs/heads/master' && 1 == 0"
         uses: LucasRoesler/openfaas-action/push@v0.1.0
         with:
           path: "stack.yml"
