--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,24 +10,25 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
+      - name: Current Branch
+        id: getBranch
+        uses: ryolambert/current-branch@v1.0
+      - name: Set up Docker Buildx
+        id: buildx
+        uses: crazy-max/ghaction-docker-buildx@v1
+        with:
+          version: latest
+      - name: Available platforms
+        run: echo ${{ steps.buildx.outputs.platforms }}
+      - name: Make buildx default builder
+        run: |
+          docker buildx install
       - name: Build
         uses: LucasRoesler/openfaas-action/build@v0.1.0
         with:
           path: "stack.yml"
+          buildArg: --platform=linux/amd64,linux/arm/v7
           tag: "sha"
-      - name: Switch directory
-        run: ls
-        working-directory: './build/abap-fibonacci'
-      - name: Build and publish image
-        uses: ilteoood/docker_buildx@master
-        with:
-          publish: true
-          imageName: abap-fibonacci
-          dockerHubUser:  ${{secrets.DOCKER_USERNAME}}
-          dockerHubPassword: ${{secrets.DOCKER_PASSWORD}}
-      - name: Switch directory
-        run: ls
-        working-directory: '.'
       - uses: LucasRoesler/openfaas-action/login@v0.1.0
         name: Login
         with:
@@ -35,15 +36,12 @@ jobs:
           username: ${{secrets.OPENFAAS_USERNAME}}
           password: ${{secrets.OPENFAAS_PASSWORD}}
       - name: Publish image
-        if: "success() && github.ref == 'refs/heads/master' && 1 == 0"
         uses: LucasRoesler/openfaas-action/push@v0.1.0
         with:
           path: "stack.yml"
           tag: "sha"
       - uses: LucasRoesler/openfaas-action/cli@v0.1.0
-        if: "success() && github.ref == 'refs/heads/master' && 1 == 0 "
+        if: "success() && ${{ steps.getBranch.outputs.branch }} == master"
         name: deploy
         with:
           args: deploy -g ${{secrets.OPENFAAS_GATEWAY}} --tag sha
-
-
