--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,6 +32,12 @@ jobs:
           gateway: ${{secrets.OPENFAAS_GATEWAY}}
           username: ${{secrets.OPENFAAS_USERNAME}}
           password: ${{secrets.OPENFAAS_PASSWORD}}
+      - name: Docker Login
+        uses: Azure/docker-login@v1
+        with:
+          username: ${{secrets.DOCKER_USERNAME}}
+          password: ${{secrets.DOCKER_PASSWORD}}
+          login-server: https://index.docker.io/v2/
       - name: Publish image
         uses: LucasRoesler/openfaas-action/push@v0.1.0
         with:
