--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,23 +26,22 @@ jobs:
           path: "stack.yml"
           buildArg: --platform=linux/amd64,linux/arm/v7
           tag: "sha"
-      - uses: LucasRoesler/openfaas-action/login@v0.1.0
-        name: Login
-        with:
-          gateway: ${{secrets.OPENFAAS_GATEWAY}}
-          username: ${{secrets.OPENFAAS_USERNAME}}
-          password: ${{secrets.OPENFAAS_PASSWORD}}
       - name: Docker Login
-        uses: Azure/docker-login@v1
-        with:
-          username: ${{secrets.DOCKER_USERNAME}}
-          password: ${{secrets.DOCKER_PASSWORD}}
-          login-server: https://index.docker.io/v2/
+        uses: actions/docker/login
+        env:
+          DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
+          DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
       - name: Publish image
         uses: LucasRoesler/openfaas-action/push@v0.1.0
         with:
           path: "stack.yml"
           tag: "sha"
+      - uses: LucasRoesler/openfaas-action/login@v0.1.0
+        name: OpenFaaS Login
+        with:
+          gateway: ${{secrets.OPENFAAS_GATEWAY}}
+          username: ${{secrets.OPENFAAS_USERNAME}}
+          password: ${{secrets.OPENFAAS_PASSWORD}}
       - uses: LucasRoesler/openfaas-action/cli@v0.1.0
         if: "success() && github.ref == 'refs/heads/master'"
         name: deploy
