--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,14 +34,14 @@ jobs:
           path: "stack.yml"
           tag: "sha"
       - uses: LucasRoesler/openfaas-action/login@v0.1.0
-        if: ${{secrets.OPENFAAS_GATEWAY}}
+        if: ${{secrets.OPENFAAS_GATEWAY}} != ''
         name: Login to OpenFaaS
         with:
           gateway: ${{secrets.OPENFAAS_GATEWAY}}
           username: ${{secrets.OPENFAAS_USERNAME}}
           password: ${{secrets.OPENFAAS_PASSWORD}}
       - uses: LucasRoesler/openfaas-action/cli@v0.1.0
-        if: "${{secrets.OPENFAAS_GATEWAY}} && success() && github.ref == 'refs/heads/master'"
+        if: "${{secrets.OPENFAAS_GATEWAY}} != '' && success() && github.ref == 'refs/heads/master'"
         name: deploy
         with:
           args: deploy -g ${{secrets.OPENFAAS_GATEWAY}} --tag sha
