--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,7 +12,9 @@ jobs:
         uses: actions/checkout@v2
       - name: Environment
         run: |
-          echo "Docker username ${{ secrets.DOCKER_USERNAME }}"
+          echo "Docker username $DOCKER_USERNAME"
+        env:
+          DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
       - name: Set up Docker Buildx
         id: buildx
         uses: crazy-max/ghaction-docker-buildx@v1
@@ -24,7 +26,7 @@ jobs:
         run: |
           docker buildx install
       - name: Build
-        uses: open-abap/openfaas-action/build@v0.1.0
+        uses: open-abap/openfaas-action/build@v0.1.1
         with:
           path: "stack.yml"
           buildArg: --platform=linux/amd64,linux/arm/v7
