--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,6 +15,9 @@ jobs:
           echo "Docker username $DOCKER_USERNAME"
         env:
           DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
+      - name: Install OpenFaaS CLI
+        run: |
+          curl -sSL https://cli.openfaas.com | sh
       - name: Set up Docker Buildx
         id: buildx
         uses: crazy-max/ghaction-docker-buildx@v1
@@ -26,18 +29,18 @@ jobs:
         run: |
           docker buildx install
       - name: Build
-        uses: open-abap/openfaas-action/build@v0.1.1
-        with:
-          path: "stack.yml"
-          buildArg: --platform=linux/amd64,linux/arm/v7
-          tag: "sha"
+        run: |
+          faas-cli build \
+          -f stack.yml \ 
+          --platform=linux/amd64,linux/arm/v7 \
+          --tag sha
       - name: Login to DockerHub Registry
         run: echo ${{ secrets.DOCKER_PASSWORD }} | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
       - name: Publish image
-        uses: LucasRoesler/openfaas-action/push@v0.1.0
-        with:
-          path: "stack.yml"
-          tag: "sha"
+        run: |
+          faas-cli push \
+          -f stack.yml \
+          --tag sha
       - uses: LucasRoesler/openfaas-action/login@v0.1.0
         name: Login to OpenFaaS
         with:
