--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,7 +32,7 @@ jobs:
         run: |
           faas-cli build \
           -f stack.yml \ 
-          --platform=linux/amd64,linux/arm/v7 \
+          --build-args platform=linux/amd64,linux/arm/v7 \
           --tag sha
       - name: Login to DockerHub Registry
         run: echo ${{ secrets.DOCKER_PASSWORD }} | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
