--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,6 +33,7 @@ jobs:
           faas-cli build \
           -f stack.yml \ 
           --build-option platform=linux/amd64,linux/arm/v7 \
+          --build-option push \
           --tag sha
       - name: Login to DockerHub Registry
         run: echo ${{ secrets.DOCKER_PASSWORD }} | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
