--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,9 +32,9 @@ jobs:
         run: |
           faas-cli build \
           -f stack.yml \ 
-          --build-option platform=linux/amd64,linux/arm/v7 \
-          --build-option push \
           --tag sha
+ #         --build-option platform=linux/amd64,linux/arm/v7 \
+ #         --build-option push \
       - name: Login to DockerHub Registry
         run: echo ${{ secrets.DOCKER_PASSWORD }} | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
       - name: Publish image
