--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,18 +33,14 @@ jobs:
           docker buildx install
       - name: Build
         run: |
-          faas-cli build
-          -f stack.yml
-          --tag sha
+          faas-cli build -f stack.yml --tag sha
  #         --build-option platform=linux/amd64,linux/arm/v7 \
  #         --build-option push \
       - name: Login to DockerHub Registry
         run: echo ${{ secrets.DOCKER_PASSWORD }} | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
       - name: Publish image
         run: |
-          faas-cli push \
-          -f stack.yml \
-          --tag sha
+          faas-cli push -f stack.yml --tag sha
       - uses: LucasRoesler/openfaas-action/login@v0.1.0
         name: Login to OpenFaaS
         with:
