--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,7 +11,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
       - name: Get Branch Name and Tag
-        id: tag
+        id: getTag
         uses: ypicard/get-branch-name-github-action@v1
       - name: Install OpenFaaS CLI
         run: |
@@ -26,7 +26,7 @@ jobs:
       - name: Build multiplatform and push
         working-directory: './build/abap-fibonacci/'
         run: |
-          docker build buildx --platform=linux/amd64,linux/arm/v7 --image=mrsimpson/abap-fibonacci':${{ steps.tag.outputs.tag }} --push
+          docker build buildx --platform=linux/amd64,linux/arm/v7 --image=mrsimpson/abap-fibonacci:${{ steps.getTag.outputs.tag }} --push
       - name: Login to DockerHub Registry
         run: echo ${{ secrets.DOCKER_PASSWORD }} | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
       - name: Login to OpenFaaS
