--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,9 @@
 name: CI
 
 on: [push]
+env:
+  IMAGE: mrsimpson/abap-fibonacci
+  TAG: ''
 
 jobs:
   build-and-deploy:
@@ -10,9 +13,6 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
-      - name: Get Branch Name and Tag
-        id: getTag
-        uses: ypicard/get-branch-name-github-action@v1
       - name: Install OpenFaaS CLI
         run: |
           curl -sSL https://cli.openfaas.com | sudo sh
@@ -23,10 +23,13 @@ jobs:
           version: latest
       - name: Available platforms
         run: echo ${{ steps.buildx.outputs.platforms }}
+      - name: Prepare image build
+        run: |
+          TAG=faas-cli build --shrinkwrap --tag sha | grep -i building | sed 's/.*://' | cut -f1 -d" "
       - name: Build multiplatform and push
         working-directory: './build/abap-fibonacci/'
         run: |
-          docker build buildx --platform=linux/amd64,linux/arm/v7 --image=mrsimpson/abap-fibonacci:${{ steps.getTag.outputs.tag }} --push
+          docker build buildx --platform=linux/amd64,linux/arm/v7 --image=mrsimpson/abap-fibonacci:$TAG --push
       - name: Login to DockerHub Registry
         run: echo ${{ secrets.DOCKER_PASSWORD }} | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
       - name: Login to OpenFaaS
