--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,7 +31,8 @@ jobs:
         working-directory: './build/abap-fibonacci/'
         run: |
           docker version && \
-          docker build buildx --platform=linux/amd64,linux/arm/v7 --image=mrsimpson/abap-fibonacci:$TAG --push
+          echo ${{ steps.buildx.outputs.platforms }} && \
+          docker build buildx  --image=mrsimpson/abap-fibonacci:$TAG --push
       - name: Login to DockerHub Registry
         run: echo ${{ secrets.DOCKER_PASSWORD }} | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
       - name: Login to OpenFaaS
