--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,7 +2,8 @@ name: CI
 
 on: [push]
 env:
-  IMAGE: mrsimpson/abap-fibonacci
+  DOCKER_REPO: mrsimpson
+  DOCKER_IMAGE: abap-fibonacci
   DOCKER_CLI_EXPERIMENTAL: enabled
   TAG: ''
 
@@ -26,13 +27,13 @@ jobs:
         run: echo ${{ steps.buildx.outputs.platforms }}
       - name: Prepare image build
         run: |
-          echo "::set-env name=TAG::$(faas-cli build --shrinkwrap --tag sha | grep -i building | sed 's/.*://' | cut -f1 -d ' ' | sed -n 2p)"
+          echo '::set-env name=TAG::$(faas-cli build --shrinkwrap --tag sha | grep -i building | sed "s/.*$IMAGE://" | cut -f1 -d" " | sed -n 2p)'
       - name: Build multiplatform and push
         working-directory: './build/abap-fibonacci/'
         run: |
           docker version && \
           echo ${{ steps.buildx.outputs.platforms }} && \
-          docker build buildx  --image=mrsimpson/abap-fibonacci:$TAG --push
+          docker build buildx -t $IMAGE:$TAG --push
       - name: Login to DockerHub Registry
         run: echo ${{ secrets.DOCKER_PASSWORD }} | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
       - name: Login to OpenFaaS
