--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,7 +33,7 @@ jobs:
         run: |
           docker version && \
           echo ${{ steps.buildx.outputs.platforms }} && \
-          docker build buildx -t $IMAGE:$TAG --push
+          docker build buildx -t $DOCKER_IMAGE:$TAG --push
       - name: Login to DockerHub Registry
         run: echo ${{ secrets.DOCKER_PASSWORD }} | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
       - name: Login to OpenFaaS
