--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,6 +23,9 @@ jobs:
         uses: crazy-max/ghaction-docker-buildx@v1
         with:
           version: latest
+      - name: Install buildx as default
+        run: |
+          docker buildx install
       - name: Available platforms
         run: echo ${{ steps.buildx.outputs.platforms }}
       - name: Prepare image build
@@ -33,7 +36,7 @@ jobs:
         run: |
           docker version && \
           echo ${{ steps.buildx.outputs.platforms }} && \
-          docker build buildx -t $DOCKER_IMAGE:$TAG --push
+          docker build -t $DOCKER_IMAGE:$TAG --push .
       - name: Login to DockerHub Registry
         run: echo ${{ secrets.DOCKER_PASSWORD }} | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
       - name: Login to OpenFaaS
