--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,14 +31,14 @@ jobs:
       - name: Prepare image build
         run: |
           echo "::set-env name=TAG::$(faas-cli build --shrinkwrap --tag sha | grep -i building | sed "s/.*$IMAGE://" | cut -f1 -d" " | sed -n 2p)"
+      - name: Login to DockerHub Registry
+        run: echo ${{ secrets.DOCKER_PASSWORD }} | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
       - name: Build multiplatform and push
         working-directory: './build/abap-fibonacci/'
         run: |
           docker version && \
           echo ${{ steps.buildx.outputs.platforms }} && \
-          docker build -t $DOCKER_IMAGE:$TAG --push .
-      - name: Login to DockerHub Registry
-        run: echo ${{ secrets.DOCKER_PASSWORD }} | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
+          docker build --platform linux/amd64,linux/arm/v7 -t $DOCKER_IMAGE:$TAG --push .
       - name: Login to OpenFaaS
         run: |
           echo ${{ secrets.OPENFAAS_PASSWORD }} | faas-cli login --gateway ${{ secrets.OPENFAAS_GATEWAY }} -u ${{ secrets.OPENFAAS_USERNAME }} --password-stdin
