--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,12 +33,15 @@ jobs:
           echo "::set-env name=TAG::$(faas-cli build --shrinkwrap --tag sha | grep -i building | sed "s/.*$IMAGE://" | cut -f1 -d" " | sed -n 2p)"
       - name: Login to DockerHub Registry
         run: echo ${{ secrets.DOCKER_PASSWORD }} | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
-      - name: Build multiplatform and push
+      - name: Build multi platform
         working-directory: './build/abap-fibonacci/'
         run: |
           docker version && \
           echo ${{ steps.buildx.outputs.platforms }} && \
-          docker build --platform linux/amd64,linux/arm/v7 -t $DOCKER_IMAGE:$TAG --push .
+          docker build --platform linux/amd64,linux/arm/v7 -t $DOCKER_IMAGE:$TAG .
+      - name: Push
+        run: |
+          faas-cli push --tag sha
       - name: Login to OpenFaaS
         run: |
           echo ${{ secrets.OPENFAAS_PASSWORD }} | faas-cli login --gateway ${{ secrets.OPENFAAS_GATEWAY }} -u ${{ secrets.OPENFAAS_USERNAME }} --password-stdin
