--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,7 +19,7 @@ jobs:
         run: |
           curl -sSL https://cli.openfaas.com | sudo sh
       - name: OpenFaaS build and push
-        uses: ./.github/actions/of-build@github-action
+        uses: ./.github/actions/of-build
         with:
           # The OpenFaaS function definition file
           stack-file: stack.yml
