--- a/.github/action/of-build/action.yml
+++ b/.github/action/of-build/action.yml
@@ -32,4 +32,7 @@ runs:
   using: 'docker'
   image: 'Dockerfile'
   args:
-    - ${{ inputs.image }}
+    - ${{ inputs.stack-file }}
+    - ${{ inputs.docker-username }}
+    - ${{ inputs.docker-password }}
+    - ${{ inputs.platforms }}
