always use latest ci/cd

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,7 +16,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
       - name: OpenFaaS build and push
-        uses: mrsimpson/action-openfaas-build@0.2.0
+        uses: mrsimpson/action-openfaas-build@master
         with:
           # The OpenFaaS function definition file
           stack-file: stack.yml
