--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,7 +22,7 @@ jobs:
           # the platform abbreviations to build for, e. g. linux/amd64,linux/arm/v7
           platforms: linux/amd64,linux/arm/v7
           
-          deploy: ${{ success() && github.ref == 'refs/heads/master' }}
+          deploy: ${{ github.ref == 'refs/heads/master' }}
           gateway: ${{ env.OPENFAAS_GATEWAY }}
           openfaas-username: ${{ env.OPENFAAS_USERNAME }}
           openfaas-password: ${{ env.OPENFAAS_PASSWORD }}
