--- a/template/open-abap/package.json
+++ b/template/open-abap/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "build": "npm run build:transpile-abap",
     "build:transpile-abap": "node ./scripts/build.js",
-    "build:transpiler": "cd node_modules/transpiler_poc/ && rm -rf build && npm i && node_modules/.bin/tsc && cd -",
-    "test": "echo \"Error: no tests specified\" && exit 0"
+    "pretest": "npm run build && cp -R ../../test .",
+    "test": "mocha"
   },
   "keywords": [],
   "author": "Oliver Jaegle",
@@ -21,7 +21,9 @@
     "@abaplint/transpiler": "^0.1.0",
     "fs-extra": "^8.1.0",
     "klaw": "^3.0.0",
+    "mocha": "^7.1.0",
     "path": "^0.12.7",
+    "should": "^13.2.3",
     "through2": "^3.0.1"
   }
 }
