Remove extract test from docker build

--- a/template/open-abap/Dockerfile
+++ b/template/open-abap/Dockerfile
@@ -32,11 +32,9 @@ COPY scripts ./scripts
 COPY function ./function
 RUN npm run build
 
-# Run any tests that may be available
-RUN npm test
-
-# Remove the original function from the image
-RUN rm -rf ./function
+# TODO: Add parameter to toggle tessting during docker build
+# # Run any tests that may be available
+# RUN npm test
 
 # Set correct permissions to use non root user
 WORKDIR /home/app/
